Search And Explore Added v1

--- a/Apps/SearchAndExplore3/app/src/main/res/values/strings.xml
+++ b/Apps/SearchAndExplore3/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="beer_icon">beer icon</string>
     <string name="bar">Bar</string>
     <string name="bakery_icon">Bakery Icon</string>
-    <string name="bakery">Bakery Icon</string>
+    <string name="bakery">Bakery</string>
     <string name="truck_icon">truck icon</string>
     <string name="delivery">Delivery</string>
     <string name="takeaway_icon">takeaway icon</string>
@@ -20,7 +20,7 @@
     <string name="night_club">Night Club</string>
     <string name="club_icon">club icon</string>
     <string name="restaurant_icon">Restaurant icon"</string>
-    <string name="restaurant">Restaurant icon"</string>
+    <string name="restaurant">Restaurant"</string>
     <string name="spa">Spa</string>
     <string name="spa_icon">Spa Icon</string>
     <string name="image_icon">Image icon for ResultList</string>
